Fix the spacing of heading, added search btn

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -220,11 +220,16 @@ main .hotel-container {
   }
 
   main .search-field-container {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
   }
 
   .hotel-rooms h2 {
     grid-column: 1/5;
+  }
+
+  .btn-search button {
+    margin-top: 2.5em;
   }
 }
 header {
